<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        tools:context="com.gobinda.sample.ui.registerLogin.RegisterLoginActivity">

    <data>

        <import type="android.view.View"/>

       <variable
            name="listener"
            type="com.gobinda.sample.ui.registerLogin.RegisterLoginActionListener"/>

        <variable
            name="viewModel"
            type="com.gobinda.sample.ui.registerLogin.RegisterLoginViewModel"/>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/fifty_dp"
            android:paddingRight="@dimen/fifty_dp"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_test"
                app:layout_constraintBottom_toTopOf="@+id/actionLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"

                />


            <LinearLayout
                android:id="@+id/actionLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintVertical_chainStyle="packed"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLabel"
                    >

                    <com.gobinda.sample.utils.ShadowToggleTextInputEditText
                        android:id="@+id/email"
                        style="@style/TextShadowEnable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLabel"
                    >

                    <com.gobinda.sample.utils.ShadowToggleTextInputEditText
                        android:id="@+id/password"
                        style="@style/TextShadowEnable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two_dp"
                    android:background="@drawable/button_login"
                    android:onClick="@{() -> listener.onLoginClick()}"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/test_size_16sp"
                    />

                <Button
                    android:id="@+id/createAccount"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:background="@drawable/button_create_acount"
                    android:onClick="@{() -> listener.onCreateAccountClick()}"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/test_size_16sp"

                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/contact_support"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/test_size_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </android.support.constraint.ConstraintLayout>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"/>

    </FrameLayout>

</layout>
